samples/_failures_safe/1761092446_286efa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24a8f73e.c: In function ‘main’:
./samples/SAFE/__tmp_24a8f73e.c:153:9: error: expected expression at end of input
  153 |         input[strcspn(input, "\n")] =
      |         ^~~~~
./samples/SAFE/__tmp_24a8f73e.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_24a8f73e.c:153:9: error: expected declaration or statement at end of input
